--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
+    "react-icons": "^5.2.1",
     "sass": "^1.76.0"
   },
   "devDependencies": {
