--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "i18n": "^0.15.1",
     "i18next": "^23.11.3",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.0",
+    "react-scroll-trigger": "^0.6.14",
     "sass": "^1.76.0"
   },
   "devDependencies": {
