--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.18",
+    "antd": "^5.17.2",
     "i18n": "^0.15.1",
     "i18next": "^23.11.3",
     "react": "^18.2.0",
